--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+
+    // Mockito for mocking in tests
+    testImplementation 'org.mockito:mockito-core:4.2.0'
 }
 
 application {
